--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-stars": "^2.2.5",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
