--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.5",
     "react-stars": "^2.2.5",
+    "react-tabs": "^6.1.0",
     "tailwindcss": "^4.0.3"
   },
   "devDependencies": {
